--- a/src/main/resources/.htaccess
+++ b/src/main/resources/.htaccess
@@ -4,6 +4,14 @@ ErrorDocument 403 /error/403.html
 ErrorDocument 404 /error/404.html
 ErrorDocument 500 /error/500.html
 
+DirectorySlash On
 RewriteEngine On
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
+RewriteCond %{REQUEST_FILENAME} /index\.html\ HTTP/
+RewriteRule ^/index(?:\.html)?$ /
+
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /.*\.html\ HTTP/
+RewriteRule ^(.*)\.html$ /$1 [R=301,L]
