--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'NightFury.xyz'
 rootProject.buildFileName = 'build.gradle.kts'
 //include 'API'
 //project(":API").buildFileName = 'build.gradle.kts'
+include 'HTML'
