--- a/src/main/resources/.htaccess
+++ b/src/main/resources/.htaccess
@@ -1,17 +1,31 @@
-ErrorDocument 400 /error/400.html
-ErrorDocument 401 /error/401.html
-ErrorDocument 403 /error/403.html
-ErrorDocument 404 /error/404.html
-ErrorDocument 500 /error/500.html
+#Error Documents
+ErrorDocument 400 /error/400
+ErrorDocument 401 /error/401
+ErrorDocument 403 /error/403
+ErrorDocument 404 /error/404
+ErrorDocument 500 /error/500
 
 DirectorySlash On
 RewriteEngine On
 
+# Forwards all www. to non-www
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
+# Forward all HTTP to HTTPS
+RewriteCond %{HTTPS} !=on
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+# Removes .html from URL
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
-RewriteCond %{REQUEST_FILENAME} /index\.html\ HTTP/
-RewriteRule ^/index(?:\.html)?$ /
+# Remove trailing slash from any non-directory path (canonicalization) - GET requests only
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_METHOD}  =GET
+RewriteCond %{REQUEST_URI} (.+)/$
+RewriteRule ^ %1 [L,R=301]
 
+# 301 from nightfury.xyz/page.html to nightfury.xyz/page
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /.*\.html\ HTTP/
 RewriteRule ^(.*)\.html$ /$1 [R=301,L]
