--- a/HTML/build.gradle
+++ b/HTML/build.gradle
@@ -23,7 +23,7 @@ sourceCompatibility = 1.8
 group 'xyz.nightfury'
 version '1.0'
 
-mainClassName = "${group}.html.Main"
+mainClassName = "${group}.Main"
 
 repositories {
     jcenter()
@@ -36,6 +36,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile "org.jetbrains.kotlinx:kotlinx-html-jvm:0.6.8"
     compile "com.github.TheMonitorLizard:KSON:master-SNAPSHOT"
+    compile "azadev.kotlin:aza-kotlin-css:1.0"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
@@ -77,7 +79,10 @@ tasks.create("createConfig") {
 
     doLast {
         def json = new JSONObject()
-        json.put("output", "$rootProject.buildDir.path/html")
+
+        // Mark the output directories for HTML and CSS files
+        json.put("html_output", "$rootProject.buildDir.path/html")
+        json.put("css_output", "$rootProject.buildDir.path/css")
 
         // Write json
         configFile.write(json.toString())
